# keepscoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL  Makefile.am  README.md  configure.ac  features.md  libkpcoinconsensus.pc.in  release-notes.md
.github/: ISSUE_TEMPLATE.md
.travis/: test_05_before_script.sh  test_06_script.sh
build-aux/m4/: kpcoin_find_bdb48.m4  kpcoin_qt.m4  kpcoin_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  install_db4.sh  keepscoin-cli.bash-completion  keepscoin-qt.pro  keepscoin-tx.bash-completion  keepscoind.bash-completion  qt_translations.py  tidy_datadir.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  keepscoin-qt.desktop.desktop  keepscoin-qt.install  keepscoin-qt.lintian-overrides  keepscoin-qt.protocol  keepscoind.bash-completion  keepscoind.examples  keepscoind.install  keepscoind.lintian-overrides  keepscoind.manpages  rules  watch
contrib/devtools/: README.md  gen-manpages.sh  logprint-scanner.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  keepscoind.conf  keepscoind.init  keepscoind.openrc  keepscoind.openrcconf  keepscoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: generate-seeds.py  nodes_main.txt
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: README.md  verify.sh
depends/: README.md
doc/: Dockerfile  Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  features.md  files.md  gitian-building.md  guide-startmany.md  init.md  masternode-budget.md  masternode-community.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  unit-tests.md  zmq.md
doc/man/: Makefile.am  keepscoin-cli.1  keepscoin-qt.1  keepscoin-tx.1  keepscoind.1
qa/pull-tester/: rpc-tests.sh  run-kpcoin-cli  run-kpcoind-for-test.sh.in  tests-config.sh.in
qa/rpc-tests/: README.md  bipdersig.py  conflictedbalance.sh  forknotify.py  getblocktemplate_longpoll.py  httpbasics.py  keypool.py  (+17 more)
share/: genbuild.sh  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.h  alert.h  allocators.h  amount.cpp  amount.h  base58.h  bip38.cpp  bip38.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  crypter.h  db.h  hash.cpp  hash.h  httprpc.cpp  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  init.h  (+94 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/primitives/: block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bip38tooldialog.cpp  bip38tooldialog.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  keepscoin.cpp  keepscoin.qrc  keepscoin_locale.qrc  keepscoinstrings.cpp  kpcoinaddressvalidator.cpp  kpcoinaddressvalidator.h  kpcoinamountfield.cpp  kpcoinamountfield.h  kpcoingui.cpp  kpcoingui.h  kpcoinunits.cpp  kpcoinunits.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  (+78 more)
src/qt/forms/: addressbookpage.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: keepscoin_bg.ts  keepscoin_ca.ts  keepscoin_cs.ts  keepscoin_da.ts  keepscoin_de.ts  keepscoin_en.ts  keepscoin_en_US.ts  keepscoin_es.ts  keepscoin_fi.ts  keepscoin_fr_FR.ts  keepscoin_it.ts  keepscoin_ja.ts  keepscoin_ko_KR.ts  keepscoin_nl.ts  keepscoin_pl.ts  keepscoin_pt.ts  keepscoin_pt_BR.ts  keepscoin_ro_RO.ts  keepscoin_ru.ts  keepscoin_sk.ts  keepscoin_sv.ts  keepscoin_tr.ts  keepscoin_uk.ts  keepscoin_zh_CN.ts  keepscoin_zh_TW.ts
src/qt/res/: keepscoin-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  kpcoinconsensus.cpp  kpcoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_kpcoin_NativeSecp256k1.c  org_kpcoin_NativeSecp256k1.h  org_kpcoin_Secp256k1Context.c  org_kpcoin_Secp256k1Context.h
src/secp256k1/src/java/org/kpcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h
src/test/: Checkpoints_tests.cpp  README.md  checkblock_tests.cpp  getarg_tests.cpp  kpcoin-util-test.py  main_tests.cpp  netbase_tests.cpp  scheduler_tests.cpp  script_tests.cpp  test_keepscoin.cpp
src/test/data/: kpcoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
test/: README.md  config.ini.in
(+20 files in other folders)
